- Detached <section>s for information into partials - Tightened up scss organization for info-blocks to better adhere to BEM

--- a/source/index.html
+++ b/source/index.html
@@ -5,9 +5,6 @@ title: Albert Yu | Design + Code
 
 {% include document-header.html %}
 
-<!-- BODY/SITE CONTENT -->
-<body>
-
   <!-- HEADER -->
   {% include page-header.html %}
 
@@ -16,29 +13,11 @@ title: Albert Yu | Design + Code
   {% include projects/ekpac.html %}
   {% include projects/juniorchefacademy.html %}
 
-  <div class="block block--info about">
-    <article class="column">
-      <h2 class="block--info__title">Work/Play</h2>
+  <!-- INFORMATION -->
+  {% include section-information.html %}
+  {% include section-contact.html %}
 
-      <p>I’m a designer and developer dedicated to building meaningful experiences that distill clarity from complexity, marry form to function, and connect ideas to people.</p>
-
-      <p>I make digital products like websites, applications, anything that goes on the web or on a screen. I occasionally dabble in print, packaging, and other shenanigans. Visual identity projects with a strong digital focus gets me really excited. I produce my best work partnering with clients who value intelligent, purposeful communication.</p>
-
-      <p>I start projects with rich conversations to establish tone and voice, before venturing into ideation and execution. Instead of force-fitting your project into a rigid process, I tailor methods and deliverables to best meet the circumstances and challenges of every engagement.</p>
-
-      <p>I work well by myself or as part of a team. I can sweat the details without losing sight of the big picture. Working remotely keeps my mind fresh and keeps costs low for everyone. I’m good at choosing the right tools for the job at hand, and I’m always learning new things to add to my toolbox. I am not an Apple snob. I do not wear trendy glasses.</p>
-    </article>
-  </div>
-
-  <div class="block block--info contact">
-    <section class="column">
-      <!-- <h1 class="block--info__title">Contact</h1> -->
-      <p>Currently available for new projects, or collaborations with other designers, programmers, artists, or engineers. I love diving into new challenges and meeting new friends.</p>
-
-      <a href="mailto:albert@albertyu.co" class="button"><span class="button__arrow"></span>Get In Touch</a>
-    </section>
-  </div>
-
+  <!-- FOOTER -->
   {% include page-footer.html %}
 
 {% include document-footer.html %}
