- Added target anchors - Cleaned up junk metadata from generated <svg>s - Fixed minor html5 validation errors

--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@ title: Albert Yu | Design + Code
   {% include page-header.html %}
 
   <!-- PROJECTS -->
+  <a id="projects"></a>
   {% include projects/harmonyhome.html %}
   {% include projects/ekpac.html %}
   {% include projects/juniorchefacademy.html %}
