--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,9 @@ title: Albert Yu | Design + Code
 
 {% include document-header.html %}
 
+  <!-- SVG SPRITE SHEET -->
+  {% include icons.svg %}
+
   <!-- HEADER -->
   {% include page-header.html %}
 
