--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@ title: Albert Yu | Design + Code
   <!-- SVG SPRITE SHEET -->
   {% include icons.svg %}
 
-  <div id="main" class="container">
+  <div class="container" role="main">
     <!-- HEADER -->
     {% include page-header.html %}
 
