- Added an overlay to reject IE8 and below with an IE conditional

--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,9 @@ title: Albert Yu | Design + Code
 
 {% include document-header.html %}
 
+  <!-- BROWSER REJECTION OVERLAY -->
+  {% include browserRejection.html %}
+
   <!-- SVG SPRITE SHEET -->
   {% include icons.svg %}
 
